# scripture-translation

./: .gitignore  IMPLEMENTATION.md  PROJECT.md  README.md  pyproject.toml  translate
configs/: runtime.json  terminology.json
data/: README.md
data/processed/: bible_john_es.jsonl  nt_es_full.jsonl
data/processed/nt/: acts_es.jsonl  colossians_es.jsonl  ephesians_es.jsonl  galatians_es.jsonl  hebrews_es.jsonl  james_es.jsonl  john_es.jsonl  jude_es.jsonl  luke_es.jsonl  mark_es.jsonl  matthew_es.jsonl  philemon_es.jsonl  philippians_es.jsonl  revelation_es.jsonl  romans_es.jsonl  titus_es.jsonl
data/raw/: bible_john_en.json  bible_john_es.json  ministry_en.txt  ministry_es.txt
data/raw/nt/: recovery_version_1john_en.json  (+26 more)
inference/: README.md
models/: README.md
project/: __init__.py  cli.py  config.py  data_pipeline.py  inference.py  model_loader.py  prepare_data_cli.py  recovery_version_bulk_cli.py  recovery_version_scraper.py  recovery_version_scraper_cli.py  terminology.py  training.py  validation.py
scripts/: prepare_data.py  scrape_new_testament.py  scrape_old_testament.py  scrape_recovery_version.py  scrape_spanish_new_testament.py  scrape_spanish_old_testament.py  scrape_spanish_recovery_version.py  train_adapter.py  translate.py  validate_mvp.py
tests/: test_data_pipeline.py  test_inference.py  test_recovery_version_scraper.py
train/: 77c7ec1c-da8e-5d1e-a488-ae6cf6126b29:train:0_sampler_weights_bible_adapter_final.json  88c007ef-5c01-50eb-91d1-1d8fcf5fdb8a:train:0_sampler_weights_bible_adapter_final.json  README.md  bible_adapter_latest.json
(+29 files in other folders)
